styles.css
/* {
   outline: 2px solid red;
}*/

body {
    background-color: rgb(255, 247, 253);
    font-family: "Montserratt", Arial, sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 40px;
    background-color: rgba(234, 221, 255, 0.37);
    color: #000;
}

footer p {
    margin: 10px;
    align-self: center;
}

header {
    padding: 0;
    height: 150px;
}

.logo {
    padding: 20px;
    margin-right: 900px;
}

nav {
    display: flex;
    width: 100%;
    height: 150px;
    justify-content: space-around;
}

nav ul {
    list-style: none;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 0;
    margin: 0;
}

nav ul li {
    margin: 0 1rem;
}

nav ul li a {
    color: black;
    text-decoration: none;
    font-size: 18px;
    font-weight: 500;
    line-height: 22px;
    letter-spacing: 0%;
}

.about-us {
    align-items: center;
    display: flex;
    gap: 50px;
    justify-content: center;
    margin: 50px;
}

.about-us a {
    width: 214px;
    font-weight: 600;
}

.about-us h1 {
    display: block;
}

.about-us p {
    font-size: 1.5rem;
    padding: 10px;
    height: auto;
    width: 612px;
    text-align: left;
}

.about-us img {
    padding: 10px;
    border-radius: 15px;
    width: 700px;
    height: 404px;
}

.about-us-title {
    display: block;
    color: rgb(64, 64, 64);
    font-size: 48px;
    font-family: 'NanumMyeongjo';
    line-height: 55px;
    text-align: left;
}

.button {
    background: rgb(59, 29, 62);
    border: none;
    border-radius: 42px;
    color: white;
    padding: 10px 22px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    cursor: pointer;
}

.button:hover {
    background-color: rgb(85, 41, 88);
}

.contact-information {
    display: flex;
}

.hero {
    position: relative;
    text-align: left;
    color: black;
    background-image: url('./images/Heroes/front-page-half-hero-2.png');
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    height: 60vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.hero h1 {
    font-size: 3rem;
    margin-bottom: 1rem;
}

.hero p {
    font-size: 1.5rem;
}

.products-front {
    display: flex;
    grid-template-columns: repeat(3, 1fr);
    gap: 2rem;
    padding: 1rem;
    margin: 0 200px;
}

.products-display {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 2rem;
    padding: 1rem;
    margin: 0 200px;
}

.product-card {
    padding: 1rem;
    text-align: center;
}

.product-card img {
    border-radius: 15px;
    max-width: 100%;
    height: auto;
    width: 300px;
}

.product-card h2 {
    font-size: 16px;
    font-weight: 400;
    margin: 1rem 0 0.5rem;
}

.product-card p {
    font-size: 1rem;
    color: #555;
    align-items: center;
    text-align: center;
}

.products-title h2 {
    display: block;
    font-size: 48px;
    font-weight: 200;
    font-family: 'NanumMyeongjo';
    line-height: 55px;
    letter-spacing: 4%;
    text-align: center;
    margin: 50px;
}

.testimonial-title h2 {
    display: block;
    font-size: 48px;
    font-weight: 200;
    font-family: 'NanumMyeongjo';
    line-height: 55px;
    letter-spacing: 4%;
    text-align: center;
    margin: 50px;
}

.filter-section-title {
    display: block;
    font-size: 20px;
    text-align: center;
    margin: 20px;
}

.testimonials-container {
    background-color: rgb(245, 245, 245);
}

.testimonials-section {
    background: rgb(245, 245, 245);
    display: block;
    margin: 0 300px;
}

.testimonial {
    display: grid;
    background: rgb(255,255,255);
    border-radius: 15px;
    box-shadow: 0px 11px 20px -7px rgba(0, 0, 0, 0.25);
    padding: 40px 85px 40px 85px;
    margin-top: 70px;
    width: 400px;
    height: 200px;
}
  
.testimonial::after {
    content: "";
    clear: both;
    display: table;
}
  
.testimonial img {
    height: 74px;
    width: 76px;
    float: left;
    margin-right: 38px;
    border-radius: 50%;
}

.testimonial p {
    align-self: center;
    justify-self: center;
}
  
.testimonial span {
    font-size: 24px;
    font-weight: 700;
    line-height: 29px;
    letter-spacing: 0%;
    text-align: left;
    margin-right: 15px;
}
  

/* Product filtration */
.filterDiv {
    display: none;
}

.show {
    display: block;
}
  
.container {
    margin-top: 10px;
    overflow: hidden;
}
  
/* Style the buttons */
#myBtnContainer {
    display: flex;
    justify-content: center;
    margin: 30px 0px;
}

.btn {
    background-color: white;
    border: black;
    border-radius: 20px;
    color: black;
    padding: 10px 22px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    cursor: pointer;
}
  
.btn:hover {
    background-color: rgb(255, 200, 249);
}
  
.btn.active {
    background-color: rgb(255, 163, 244);
    color: white;
}

#toTopButton {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 30px;
    z-index: 99;
    border: none;
    background: none;
    outline: none;
    cursor: pointer;
}

/*#toTopButton:hover {
    background-color: #555;
}*/

/* Adjustments for smaller screens */
@media (max-width: 1024px) {
    /*.about-us {

    }*/

    .about-us p {
        font-size: 1rem;
        width: 300px;
        height: auto;
    }

    .about-us img {
        size: 300px;
    }

    .hero {
        height: 50vh;
    }

    .hero h1 {
        font-size: 2.5rem;
    }

    .hero p {
        font-size: 1.2rem;
    }

    .products {
        grid-template-columns: repeat(2, 1fr);
        margin: 0 200px;
    }
}

@media (max-width: 768px) {
    .hero {
        height: 40vh;
    }

    .hero h1 {
        font-size: 2.5rem;
    }

    .hero p {
        font-size: 1.2rem;
    }

    .products {
        grid-template-columns: repeat(2, 1fr);
        margin: 0 100px;
    }

    .about-us {
        margin: 0;
    }

    .testimonials-container {
        margin: 0;
    }
}

@media (max-width: 571px) {
    .header{
        padding: 0;
    }
    
    .hero {
        height: 40vh;
    }

    .hero h1 {
        font-size: 2.5rem;
    }

    .hero p {
        font-size: 1.2rem;
    }

    .products {
        grid-template-columns: repeat(2, 1fr);
        margin: 0;
    }

    .about-us {
        margin: 0;
    }

    .testimonials-container {
        margin: 0;
    }

    .testimonial {
        text-align: center;
    }

    .testimonial img {
        margin: auto;
        float: none;
        display: block;
    }
}

@media (max-width: 480px) {
    .hero {
        height: 40vh;
    }

    .hero h1 {
        font-size: 2rem;
    }

    .hero p {
        font-size: 1rem;
    }
    
    .products {
        grid-template-columns: 1fr;
    }
}

@media (max-width: 320px) {
    .header {
        padding: 0;
        margin: 0;
    }
    
    .hero {
        height: 30vh;
    }

    .hero h1 {
        font-size: 2rem;
    }

    .hero p {
        font-size: 1rem;
    }
    
    .products {
        grid-template-columns: 1fr;
        margin: 0;
    }
}

